# pose_estimation

./: .gitignore  CMakeLists.txt
.claude/: settings.json
benchmark/: mediapipe_pose.py
graphify-out/: .graphify_labels.json  .graphify_python  .graphify_root  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
graphify-out/cache/: last_query_stamp  stat-index.json
include/: camera.hpp  csv_logger.hpp  fps_meter.hpp  pose_estimator.hpp  yolo_pose.hpp
results/: camera_baseline.csv
src/: camera.cpp  csv_logger.cpp  fps_meter.cpp  main.cpp  pose_estimator.cpp  yolo_pose.cpp
